--- a/TutorialAndDevGuide/Tutorial/Interpret.tex
+++ b/TutorialAndDevGuide/Tutorial/Interpret.tex
@@ -2,7 +2,8 @@
 \section{Interpreting}
 \label{interpcompile}
 The Copilot RV framework comes with both an interpreter and a
-compiler. We will address compiling in \hyperref[sec:complete_example]{section 4} with a complete example. 
+compiler. We will address compiling in \hyperref[sec:complete_example]{Section 4}
+ with a complete example. 
 \noindent To use the language, your Haskell module should contain the following import:
 %
 \begin{code}
@@ -21,30 +22,13 @@ In the ./Examples directory we have provided you with an example
 for you to follow allong. \texttt{Spec.hs} is the following Copilot program:
 %
 \lstinputlisting[language = Copilot, numbers = left]{Examples/Spec.hs}
-%import Language.Copilot hiding (even, odd) 
-%
-%import qualified Prelude as P hiding ((++),(==), mod,  even, odd)
-%
-%nats :: Stream Int32
-%nats = [0] ++ (1 + nats)
-%
-%even :: Stream Int32 -> Stream Bool
-%even n = n `mod` 2 == 0
-%
-%odd :: Stream Int32 -> Stream Bool
-%odd n2 = n2 `mod` 2 == 1
-%
-%spec = do
-%  trigger "trigger1" (even nats) [arg nats, arg $ odd nats]
-%  trigger "trigger2" (odd nats) [arg nats]
-%\end{lstlisting}
-% $
+
 \begin{description}
   \item[Line 1] Here we inclued the Copilot Language so that we gain access to the
   front end language.
-  \item[Line 3] Here we include the Prelude so that we can hide base Haskell syntax
-  that we have redefined. If this is not included you will get an \texttt{Ambiguious
-  Occurance} error. 
+  \item[Line 3] Here we include the Prelude. Notice that we hide base Haskell
+  syntax for functions that we define for use on streams . If this is not
+  included you will get an \texttt{Ambiguious Occurance} error. 
   \item[Line 5-12] Here we define data streams as input and output data streams. We
   go over defining functions as streams in Section 3 of this tutorial. 
   \item[Line 14-16] Here {\tt nats} is the stream of natural numbers, and {\tt even} and {\tt odd}
